# keel

./: README.md  keel-skills-bridge-report.md  run.sh
_keel/: BOOTSTRAP.md  README.md  build.sh  keel.spec  main.py  pyproject.toml  start.py
_keel/examples/url-shortener/: CORE.md  PRINCIPLES.md  README.md  spec_model.yml
_keel/scripts/: build_template_zip.py
_keel/scripts/agent/: create_task.py  skills.py  update_code_map.py
_keel/scripts/keel/: __init__.py  api.py  helpers.py  main.py  mcp_server.py  operations.py  scaffold.py  skills.py
_keel/scripts/keel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
_keel/skills/: README.md
_keel/skills/dev-implement-task/: SKILL.md
_keel/skills/dev-intake/: SKILL.md
_keel/skills/dev-map-module/: SKILL.md
_keel/skills/dev-release/: SKILL.md
_keel/skills/dev-review-diff/: SKILL.md
_keel/skills/dev-update-docs/: SKILL.md
_keel/skills/dev-update-handoff/: SKILL.md
_keel/skills/dev-write-scenario/: SKILL.md
_keel/skills/example-csv-clean/: SKILL.md
_keel/skills/example-csv-clean/references/: rules.md
_keel/templates/: AGENTS.template.md  AI_START_HERE.template.md  CHANGELOG.template.md  GEMINI.template.md  Makefile.template  PRINCIPLES.template.md  PROJECT_SPEC.template.md  SKILL.template.md  acceptance.template.yml  task-brief.template.md
_keel/tests/: conftest.py  test_api.py  test_build_context.py  test_create_task.py  test_keel_lib.py  test_main_cli.py  test_mcp_server.py  test_scaffold.py  test_skills.py  test_startup.py  test_update_code_map.py  test_verify_task.py
(+65 files in other folders)
